--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
     <script>
         // Show loading screen for 2 seconds then redirect to user login
         setTimeout(function() {
-            window.location.href = 'pages/user_login.html';
+            window.location.href = 'user_login.html';
         }, 2000);
-        
+
         // Fallback redirect in case of any issues
         window.addEventListener('load', function() {
             setTimeout(function() {
                 if (window.location.pathname.endsWith('index.html') || window.location.pathname.endsWith('/')) {
-                    window.location.href = 'pages/user_login.html';
+                    window.location.href = 'user_login.html';
                 }
             }, 3000);
         });
