Remove user login redirect; add admin login button in header

--- a/index.html
+++ b/index.html
@@ -59,28 +59,20 @@
 <script type="module" src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fstreampay6097back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script>
 </head>
 <body>
+    <header style="position: absolute; top: 0; left: 0; width: 100%; padding: 20px; display: flex; justify-content: flex-end; background: rgba(0,0,0,0.1);">
+        <button id="admin-login-btn" style="padding: 10px 20px; font-size: 1rem; background: #764ba2; color: white; border: none; border-radius: 5px; cursor: pointer;">Admin</button>
+    </header>
     <div class="loading-container">
         <div class="logo">StreamPay Pro</div>
         <div class="loading-text">Welcome to Premium Video Streaming</div>
         <div class="spinner"></div>
-        <div class="redirect-info">Redirecting to login...</div>
     </div>
 
     <script>
-        // Show loading screen for 2 seconds then redirect to user login
-        setTimeout(function() {
+        document.getElementById('admin-login-btn').addEventListener('click', function() {
             window.location.href = 'user_login.html';
-        }, 2000);
-
-        // Fallback redirect in case of any issues
-        window.addEventListener('load', function() {
-            setTimeout(function() {
-                if (window.location.pathname.endsWith('index.html') || window.location.pathname.endsWith('/')) {
-                    window.location.href = 'user_login.html';
-                }
-            }, 3000);
         });
     </script>
-<script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
+    <script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
 </body>
 </html>
