--- a/user_dashboard.html
+++ b/user_dashboard.html
@@ -31,7 +31,7 @@
                     <a href="user_dashboard.html" class="text-primary font-medium">Dashboard</a>
                     <a href="video_player.html" class="text-text-secondary hover:text-primary transition-colors duration-200">Videos</a>
                     <a href="payment_history.html" class="text-text-secondary hover:text-primary transition-colors duration-200">Payment History</a>
-                    <a href="admin_dashboard.html" class="text-text-secondary hover:text-primary transition-colors duration-200">Admin</a>
+                    <a href="user_login.html" id="admin-login-link" class="text-text-secondary hover:text-primary transition-colors duration-200">Admin</a>
                 </div>
                 
                 <!-- User Menu -->
@@ -509,6 +509,16 @@
     </footer>
 
     <script>
+// Ensure Admin link opens admin login
+document.addEventListener('DOMContentLoaded', function() {
+    var adminLink = document.getElementById('admin-login-link');
+    if (adminLink) {
+        adminLink.addEventListener('click', function(e) {
+            e.preventDefault();
+            window.location.href = 'user_login.html';
+        });
+    }
+});
         // Mobile menu toggle
         document.getElementById('mobile-menu-btn').addEventListener('click', function() {
             const mobileMenu = document.getElementById('mobile-menu');
