--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -44,7 +44,7 @@
                         </div>
                         <span class="text-sm font-medium text-text-primary">Admin</span>
                     </div>
-                    <a href="user_dashboard.html" class="text-text-secondary hover:text-primary transition-colors duration-200">
+                    <!-- Logout link removed -->
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/>
                         </svg>
@@ -601,15 +601,7 @@
         });
 
         // Logout functionality
-        document.querySelectorAll('a[href="user_dashboard.html"]').forEach(function(el) {
-            el.addEventListener('click', function(e) {
-                e.preventDefault();
-                if (confirm('Are you sure you want to logout?')) {
-                    localStorage.removeItem('streamPayUser');
-                    window.location.href = 'user_dashboard.html';
-                }
-            });
-        });
+        // Logout removed
     </script>
 <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
 </body>
