--- a/video_player.html
+++ b/video_player.html
@@ -58,7 +58,7 @@
                             <a href="user_dashboard.html" class="block px-4 py-2 text-sm text-text-secondary hover:bg-secondary-50 hover:text-primary transition-colors duration-200">Dashboard</a>
                             <a href="payment_history.html" class="block px-4 py-2 text-sm text-text-secondary hover:bg-secondary-50 hover:text-primary transition-colors duration-200">Payment History</a>
                             <div class="border-t border-border my-2"></div>
-                            <a href="user_login.html" class="block px-4 py-2 text-sm text-text-secondary hover:bg-secondary-50 hover:text-primary transition-colors duration-200">Sign Out</a>
+                            <!-- Sign Out removed -->
                         </div>
                     </div>
                 </div>
