Updated multiple files with latest changes

--- a/user_dashboard.html
+++ b/user_dashboard.html
@@ -509,12 +509,12 @@
     </footer>
 
     <script>
-// Admin button redirects to admin_dashboard.html
+// Admin button redirects to user_login.html
 document.addEventListener('DOMContentLoaded', function() {
     var adminBtn = document.getElementById('admin-login-btn');
     if (adminBtn) {
         adminBtn.addEventListener('click', function() {
-            window.location.href = 'admin_dashboard.html';
+            window.location.href = 'user_login.html';
         });
     }
 });
