--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -30,7 +30,7 @@
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="admin_dashboard.html" class="text-primary font-medium border-b-2 border-primary pb-1">Dashboard</a>
                     <a href="admin_video_management.html" class="text-text-secondary hover:text-primary transition-colors duration-200">Video Management</a>
-                    <a href="user_dashboard.html" class="text-text-secondary hover:text-primary transition-colors duration-200">User View</a>
+                    <a href="video_player.html?adminView=true" class="text-text-secondary hover:text-primary transition-colors duration-200">User View</a>
                     <a href="payment_history.html" class="text-text-secondary hover:text-primary transition-colors duration-200">Payments</a>
                 </div>
                 
@@ -67,7 +67,7 @@
             <div class="px-2 pt-2 pb-3 space-y-1">
                 <a href="admin_dashboard.html" class="block px-3 py-2 text-primary font-medium bg-primary-50 rounded-md">Dashboard</a>
                 <a href="admin_video_management.html" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-secondary-50 rounded-md transition-colors duration-200">Video Management</a>
-                <a href="user_dashboard.html" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-secondary-50 rounded-md transition-colors duration-200">User View</a>
+                <a href="video_player.html?adminView=true" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-secondary-50 rounded-md transition-colors duration-200">User View</a>
                 <a href="payment_history.html" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-secondary-50 rounded-md transition-colors duration-200">Payments</a>
                 <a href="user_dashboard.html" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-secondary-50 rounded-md transition-colors duration-200">Logout</a>
             </div>
