Update dashboards, video player, and main page; add PayPal integration pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <script>
-        window.location.href = 'user_dashboard.html';
+        window.location.href = 'video_player.html';
     </script>
 </body>
 </html>
