--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -327,8 +327,48 @@
                     </div>
                 </div>
 
-                <!-- System Status -->
+                <!-- Banner Advertisement Management -->
                 <div class="card animate-slide-up" style="animation-delay: 400ms;">
+                    <h3 class="text-lg font-semibold text-text-primary mb-4">Banner Advertisement</h3>
+                    <div class="space-y-4">
+                        <div>
+                            <label class="block text-sm font-medium text-text-secondary mb-2">Banner Title</label>
+                            <input type="text" id="banner-title" class="w-full px-3 py-2 border border-border rounded-md bg-surface text-text-primary focus:outline-none focus:ring-2 focus:ring-primary-500" placeholder="Enter banner title">
+                        </div>
+
+                        <div>
+                            <label class="block text-sm font-medium text-text-secondary mb-2">Banner Description</label>
+                            <textarea id="banner-description" class="w-full px-3 py-2 border border-border rounded-md bg-surface text-text-primary focus:outline-none focus:ring-2 focus:ring-primary-500" placeholder="Enter banner description" rows="3"></textarea>
+                        </div>
+
+                        <div>
+                            <label class="block text-sm font-medium text-text-secondary mb-2">Banner Image</label>
+                            <input type="file" id="banner-image" accept="image/*" class="w-full px-3 py-2 border border-border rounded-md bg-surface text-text-primary focus:outline-none focus:ring-2 focus:ring-primary-500">
+                            <p class="text-xs text-text-secondary mt-1">Supported formats: JPG, PNG, GIF. Max size: 5MB</p>
+                        </div>
+
+                        <div id="current-banner-preview" class="hidden">
+                            <label class="block text-sm font-medium text-text-secondary mb-2">Current Banner</label>
+                            <div class="border border-border rounded-md p-3 bg-secondary-50">
+                                <img id="current-banner-img" src="" alt="Current Banner" class="w-full h-32 object-cover rounded-md mb-2">
+                                <p id="current-banner-title" class="text-sm text-text-primary"></p>
+                                <p id="current-banner-description" class="text-xs text-text-secondary mt-1"></p>
+                            </div>
+                        </div>
+
+                        <button id="save-banner-btn" class="w-full btn-primary flex items-center justify-center space-x-2">
+                            <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V7h10v2z"/>
+                            </svg>
+                            <span>Save Banner</span>
+                        </button>
+
+                        <div id="banner-save-status" class="hidden text-sm text-center"></div>
+                    </div>
+                </div>
+
+                <!-- System Status -->
+                <div class="card animate-slide-up" style="animation-delay: 500ms;">
                     <h3 class="text-lg font-semibold text-text-primary mb-4">System Status</h3>
                     <div class="space-y-3">
                         <div class="flex items-center justify-between">
@@ -601,6 +641,138 @@
                 alert('Payment details feature coming soon!');
             }
         });
+
+        // Banner advertisement management
+        function loadCurrentBanner() {
+            const bannerData = localStorage.getItem('streamPayBanner');
+            if (bannerData) {
+                const banner = JSON.parse(bannerData);
+                document.getElementById('banner-title').value = banner.title || '';
+                document.getElementById('banner-description').value = banner.description || '';
+                document.getElementById('current-banner-img').src = banner.image || '';
+                document.getElementById('current-banner-title').textContent = banner.title || 'No title';
+                document.getElementById('current-banner-description').textContent = banner.description || '';
+                document.getElementById('current-banner-preview').classList.remove('hidden');
+            }
+        }
+
+        function saveBanner() {
+            const titleInput = document.getElementById('banner-title');
+            const descriptionInput = document.getElementById('banner-description');
+            const imageInput = document.getElementById('banner-image');
+            const statusDiv = document.getElementById('banner-save-status');
+
+            const title = titleInput.value.trim();
+            const description = descriptionInput.value.trim();
+
+            if (!title) {
+                statusDiv.textContent = 'Please enter a banner title.';
+                statusDiv.className = 'text-sm text-center text-error-600';
+                statusDiv.classList.remove('hidden');
+                return;
+            }
+
+            const bannerData = {
+                title: title,
+                description: description,
+                image: null,
+                lastUpdated: new Date().toISOString()
+            };
+
+            // Handle image upload
+            if (imageInput.files && imageInput.files[0]) {
+                const file = imageInput.files[0];
+
+                // Check file size (5MB limit)
+                if (file.size > 5 * 1024 * 1024) {
+                    statusDiv.textContent = 'Image file size must be less than 5MB.';
+                    statusDiv.className = 'text-sm text-center text-error-600';
+                    statusDiv.classList.remove('hidden');
+                    return;
+                }
+
+                // Check file type
+                if (!file.type.startsWith('image/')) {
+                    statusDiv.textContent = 'Please select a valid image file.';
+                    statusDiv.className = 'text-sm text-center text-error-600';
+                    statusDiv.classList.remove('hidden');
+                    return;
+                }
+
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    bannerData.image = e.target.result;
+                    localStorage.setItem('streamPayBanner', JSON.stringify(bannerData));
+
+                    // Update preview
+                    document.getElementById('current-banner-img').src = bannerData.image;
+                    document.getElementById('current-banner-title').textContent = bannerData.title;
+                    document.getElementById('current-banner-description').textContent = bannerData.description;
+                    document.getElementById('current-banner-preview').classList.remove('hidden');
+
+                    // Clear form
+                    titleInput.value = '';
+                    descriptionInput.value = '';
+                    imageInput.value = '';
+
+                    // Show success message
+                    statusDiv.textContent = 'Banner saved successfully!';
+                    statusDiv.className = 'text-sm text-center text-success-600';
+                    statusDiv.classList.remove('hidden');
+
+                    // Hide success message after 3 seconds
+                    setTimeout(() => {
+                        statusDiv.classList.add('hidden');
+                    }, 3000);
+                };
+                reader.readAsDataURL(file);
+            } else {
+                // No new image, just update title
+                const existingBanner = localStorage.getItem('streamPayBanner');
+                if (existingBanner) {
+                    const existing = JSON.parse(existingBanner);
+                    bannerData.image = existing.image;
+                }
+
+                localStorage.setItem('streamPayBanner', JSON.stringify(bannerData));
+
+                // Update preview
+                if (bannerData.image) {
+                    document.getElementById('current-banner-img').src = bannerData.image;
+                    document.getElementById('current-banner-title').textContent = bannerData.title;
+                    document.getElementById('current-banner-description').textContent = bannerData.description;
+                    document.getElementById('current-banner-preview').classList.remove('hidden');
+                }
+
+                // Clear form
+                titleInput.value = '';
+                descriptionInput.value = '';
+                imageInput.value = '';
+
+                // Show success message
+                statusDiv.textContent = 'Banner title updated successfully!';
+                statusDiv.className = 'text-sm text-center text-success-600';
+                statusDiv.classList.remove('hidden');
+
+                // Hide success message after 3 seconds
+                setTimeout(() => {
+                    statusDiv.classList.add('hidden');
+                }, 3000);
+            }
+        }
+
+        // Initialize banner management
+        window.addEventListener('load', function() {
+            // ... existing code ...
+
+            // Load current banner data
+            loadCurrentBanner();
+
+            // ... existing code ...
+        });
+
+        // Banner save button handler
+        document.getElementById('save-banner-btn').addEventListener('click', saveBanner);
 
         // Logout functionality
         // Logout removed
