Make webapp responsive for mobile devices

--- a/user_dashboard.html
+++ b/user_dashboard.html
@@ -53,7 +53,7 @@
                             <!--<a href="javascript:void(0)" class="block px-4 py-2 text-sm text-text-secondary hover:bg-secondary-50 hover:text-primary transition-colors duration-200">Profile Settings</a>-->
                             <a href="javascript:void(0)" class="block px-4 py-2 text-sm text-text-secondary hover:bg-secondary-50 hover:text-primary transition-colors duration-200">Support</a>
                             <div class="border-t border-border my-2"></div>
-                            <button id="logout-btn" class="block w-full text-left px-4 py-2 text-sm text-error-600 hover:bg-error-50 transition-colors duration-200">Sign Out</button>
+                            <button id="logout-btn" disabled class="block w-full text-left px-4 py-2 text-sm text-error-600 hover:bg-error-50 transition-colors duration-200">Sign Out</button>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                 <a href="user_dashboard.html" class="block px-3 py-2 text-primary font-medium bg-primary-50 rounded-md">Dashboard</a>
                 <a href="admin_dashboard.html" class="block px-3 py-2 text-text-secondary hover:text-primary hover:bg-secondary-50 rounded-md transition-colors duration-200">Admin</a>
                 <div class="border-t border-border my-2"></div>
-                <button id="mobile-logout-btn" class="block w-full text-left px-3 py-2 text-error-600 hover:bg-error-50 rounded-md transition-colors duration-200">Sign Out</button>
+                <button id="mobile-logout-btn" disabled class="block w-full text-left px-3 py-2 text-error-600 hover:bg-error-50 rounded-md transition-colors duration-200">Sign Out</button>
             </div>
         </div>
     </nav>
