--- a/video_player.html
+++ b/video_player.html
@@ -37,10 +37,28 @@
         .paypal-processing {
             background: linear-gradient(135deg, #0070ba, #1546a0);
             color: white;
+            border: none;
+            padding: 12px 20px;
+            border-radius: 25px;
+            font-size: 0.95rem;
+            font-weight: 600;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            transition: all 0.3s ease;
+            min-width: 80px;
+            justify-content: center;
         }
 
         .paypal-processing:hover {
             background: linear-gradient(135deg, #005ea6, #0d3a8a);
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0, 112, 186, 0.4);
+        }
+
+        .paypal-processing:active {
+            transform: translateY(0);
         }
 
         .payment-success {
@@ -266,6 +284,145 @@
 
             .comment-time {
                 align-self: flex-end;
+            }
+        }
+
+        /* Advertisement Banner Styles */
+        .banner-ad {
+            background: linear-gradient(135deg, #f8f9fa, #e9ecef);
+            border: 2px solid #dee2e6;
+            border-radius: 15px;
+            padding: 20px;
+            margin: 20px 0;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .banner-ad::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, #ff8a00, #ff6b00);
+        }
+
+        .banner-content {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            position: relative;
+            z-index: 1;
+        }
+
+        .banner-image {
+            width: 80px;
+            height: 80px;
+            border-radius: 12px;
+            object-fit: cover;
+            border: 2px solid #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+        }
+
+        .banner-text {
+            flex: 1;
+        }
+
+        .banner-title {
+            font-size: 1.4rem;
+            font-weight: 700;
+            color: #2d3748;
+            margin-bottom: 8px;
+            line-height: 1.3;
+        }
+
+        .banner-description {
+            color: #4a5568;
+            font-size: 0.95rem;
+            line-height: 1.5;
+            margin-bottom: 12px;
+        }
+
+        .banner-cta {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            background: linear-gradient(135deg, #ff8a00, #ff6b00);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 25px;
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 0.9rem;
+            transition: all 0.3s ease;
+            border: none;
+            cursor: pointer;
+        }
+
+        .banner-cta:hover {
+            background: linear-gradient(135deg, #ff6b00, #ff4500);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(255, 138, 0, 0.4);
+        }
+
+        .banner-close {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            background: rgba(0, 0, 0, 0.1);
+            border: none;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            z-index: 2;
+        }
+
+        .banner-close:hover {
+            background: rgba(0, 0, 0, 0.2);
+        }
+
+        .banner-close svg {
+            width: 16px;
+            height: 16px;
+            color: #666;
+        }
+
+        /* Mobile responsiveness for banner */
+        @media (max-width: 768px) {
+            .banner-ad {
+                padding: 15px;
+                margin: 15px 0;
+            }
+
+            .banner-content {
+                flex-direction: column;
+                text-align: center;
+                gap: 15px;
+            }
+
+            .banner-image {
+                width: 60px;
+                height: 60px;
+            }
+
+            .banner-title {
+                font-size: 1.2rem;
+            }
+
+            .banner-description {
+                font-size: 0.9rem;
+            }
+
+            .banner-cta {
+                padding: 12px 24px;
+                font-size: 0.95rem;
             }
         }
     </style>
